Admin: Fix floating save button size on mobile screens

--- a/shuup/admin/static_src/base/scss/shuup/support-navigation.scss
+++ b/shuup/admin/static_src/base/scss/shuup/support-navigation.scss
@@ -164,6 +164,10 @@ body {
             }
         }
 
+        .btn-save.opaque {
+            width: auto;
+        }
+
         .btn-group {
             margin: 10px 10px 0 0;
 
